--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,15 @@
 
 	<title>Mini Bank</title>
 
+	<link rel="manifest" href="manifest.json">
+    <meta name="description" content="Mini Bank PWA">
+    <meta name="theme-color" content="#f2a154" />
+
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-title" content="Mini Bank PWA">
+    <link rel="apple-touch-icon" href="assets/icons/icon-152x152.png">
+
 	<link rel='icon' type='image/png' href='assets/wallet.svg'>
 	<link rel='stylesheet' href='/global.css'>
 	<link rel='stylesheet' href='/build/bundle.css'>
@@ -16,5 +25,22 @@
 </head>
 
 <body>
+	<noscript>
+		<div>
+		  Oops! Javascript required here! Allow it and try again!
+		</div>
+	  </noscript>
+  
+	  <script src="/scripts/install.js"></script>
+	  <script>
+		if ('serviceWorker' in navigator) {
+		  window.addEventListener('load', () => {
+			navigator.serviceWorker.register('/service-worker.js')
+			  .then((reg) => {
+				console.log('Service worker registered.', reg);
+			  });
+		  });
+		}
+	  </script>
 </body>
 </html>
