PWA Lighthouse changes

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 
 	<title>Mini Bank</title>
 
-	<link rel="manifest" href="manifest.json">
+	<link rel="manifest" href="/mainfest.json">
     <meta name="description" content="Mini Bank PWA">
     <meta name="theme-color" content="#f2a154" />
 
